--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="ru">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Mart - HTML5 Resoponsive onepage e-commerce template </title>
+        <title>Масло черного тмина | Cumin - полезные продукты</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="images/favicon.png">
@@ -33,19 +33,10 @@
                     <div  class="col-md-6">
                         <div class="header-top-content">
                             <ul class="nav nav-pills navbar-left">
-                                <li><a href="#"><i class="pe-7s-call"></i><span>123-123456789</span></a></li>
-                                <li><a href="#"><i class="pe-7s-mail"></i><span> info@mart.com</span></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div  class="col-md-6">
-                        <div class="header-top-menu">
-                            <ul class="nav nav-pills navbar-right">
-                                <li><a href="#">My Account</a></li>
-                                <li><a href="#">Wishlist</a></li>
-                                <li><a href="#">Cart</a></li>
-                                <li><a href="#">Checkout</a></li>
-                                <li><a href="#"><i class="pe-7s-lock"></i>Login/Register</a></li>
+                                <li><a href="#"><i class="pe-7s-call"></i><span> 8 029 123 45 67</span></a></li>
+                                <li><a href="#"><i class="pe-7s-mail"></i><span> info@makemi.by</span></a></li>
+                                <li><a href="#"><i class="pe-7s-call"></i><span> Заказать звонок</span></a></li>
+                                <li><a href="#"><i class="pe-7s-mail"></i><span> Написать нам</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -64,22 +55,22 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#"><b>M</b>art</a>
+                        <a class="navbar-brand" href="#"><b></b>Makemi</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">page</a></li>
-                            <li><a href="#">shop</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li class="active"><a href="#">Магазин</a></li>
+                            <li><a href="#">Польза тмина</a></li>
+                            <li><a href="#">Производство</a></li>
+                            <li><a href="#">Блог</a></li>
+                            <li><a href="#">Дилерам</a></li>
+                            <li><a href="#">Контакты</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right cart-menu">
                         <li><a href="#" class="search-btn"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><span> Cart -$0&nbsp;</span> <span class="shoping-cart">0</span></a></li>
+                        <li><a href="#"><span> Корзина &nbsp;</span> <span class="shoping-cart">0</span></a></li>
                     </ul>
                     </div><!-- /.navbar-collapse -->
                 </div><!-- /.container -->
@@ -92,7 +83,7 @@
                     <div class="col-md-12">
                         <form class="form-inline col-md-12 wow fadeInDown animated">
                             <div class="form-group">
-                                <input type="email" class="form-control subscribe" id="email" placeholder="Search...">
+                                <input type="email" class="form-control subscribe" id="email" placeholder="Найти...">
                                 <button class="suscribe-btn" ><i class="pe-7s-search"></i></button>
                             </div>
                         </form><!-- end /. form -->
@@ -113,27 +104,27 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <img src="images/slider.jpg" width="1648" height="600" alt="">
+                        <img src="images/slider.jpg" width="1280" height="600" alt="">
                         <div class="carousel-caption">
-                            <h2>DRESSES <b>&</b> JEANS</h2>
-                            <h3>FROM OURFAMOUS BRANDS <Span>SALE</Span></h3>
-                            <a href="#">Buy Now</a>
+                            <h2>Масло <b>&</b> семена тмина</h2>
+                            <h3>с доставкой по <Span>Беларуси</Span></h3>
+                            <a href="#">Купить</a>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="images/slider.jpg" width="1648" height="600" alt="">
+                        <img src="images/slider.jpg" width="1280" height="600" alt="">
                         <div class="carousel-caption">
-                            <h2>DRESSES <b>&</b> JEANS</h2>
-                            <h3>FROM OURFAMOUS BRANDS <Span>SALE</Span></h3>
-                            <a href="#">Buy Now</a>
+                            <h2>Масло <b>&</b> семена тмина</h2>
+                            <h3>с доставкой по <Span>Беларуси</Span></h3>
+                            <a href="#">Купить</a>
                         </div>
                     </div>
                     <div class="item ">
-                        <img src="images/slider.jpg" width="1648" height="600" alt="">
+                        <img src="images/slider.jpg" width="1280" height="600" alt="">
                         <div class="carousel-caption">
-                            <h2>DRESSES <b>&</b> JEANS</h2>
-                            <h3>FROM OURFAMOUS BRANDS <Span>SALE</Span></h3>
-                            <a href="#">Buy Now</a>
+                            <h2>Масло <b>&</b> семена тмина</h2>
+                            <h3>с доставкой по <Span>Беларуси</Span></h3>
+                            <a href="#">Купить</a>
                         </div>
                     </div>
                 </div>
@@ -148,7 +139,7 @@
             </div>
         </section>
 
-        <section class="service-section">
+        <!--<section class="service-section">
             <div class="container">
                 <div class="row">
                     <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.1s">
@@ -181,14 +172,14 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
 
         <section class="new-section">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="titie-section wow fadeInDown animated ">
-                            <h1>NEW COLLECTION</h1>
+                            <h1>МАГАЗИН</h1>
                         </div>
                     </div>
                 </div>
@@ -198,16 +189,13 @@
                             <img src="images/1.png" class="img-responsive" width="255" height="322" alt="">
                             <div class="product-hover">
                                 <div class="product-meta">
-                                    <a href="#"><i class="pe-7s-like"></i></a>
-                                    <a href="#"><i class="pe-7s-shuffle"></i></a>
-                                    <a href="#"><i class="pe-7s-clock"></i></a>
-                                    <a href="#"><i class="pe-7s-cart"></i>Add to Cart</a>
+                                    <a href="#"><i class="pe-7s-cart"></i>Добавить в корзину</a>
                                 </div>
                             </div>
                             <div class="product-title">
                                 <a href="#">
-                                    <h3>Blue Tshirt</h3>
-                                    <span>$26</span>
+                                    <h3>Масло черного тмина 100 мл.</h3>
+                                    <span>5р</span>
                                 </a>
                             </div>
                         </div>
@@ -217,16 +205,13 @@
                             <img src="images/2.png" class="img-responsive" width="255" height="322" alt="">
                             <div class="product-hover">
                                 <div class="product-meta">
-                                    <a href="#"><i class="pe-7s-like"></i></a>
-                                    <a href="#"><i class="pe-7s-shuffle"></i></a>
-                                    <a href="#"><i class="pe-7s-clock"></i></a>
-                                    <a href="#"><i class="pe-7s-cart"></i>Add to Cart</a>
+                                    <a href="#"><i class="pe-7s-cart"></i>Добавить в корзину</a>
                                 </div>
                             </div>
                             <div class="product-title">
                                 <a href="#">
-                                    <h3>WOMAN shirt</h3>
-                                    <span>$31</span>
+                                    <h3>Масло черного тмина 250 мл.</h3>
+                                    <span>10р</span>
                                 </a>
                             </div>
                         </div>
@@ -236,16 +221,13 @@
                             <img src="images/3.png" class="img-responsive" width="255" height="322" alt="">
                             <div class="product-hover">
                                 <div class="product-meta">
-                                    <a href="#"><i class="pe-7s-like"></i></a>
-                                    <a href="#"><i class="pe-7s-shuffle"></i></a>
-                                    <a href="#"><i class="pe-7s-clock"></i></a>
-                                    <a href="#"><i class="pe-7s-cart"></i>Add to Cart</a>
+                                    <a href="#"><i class="pe-7s-cart"></i>Добавить в корзину</a>
                                 </div>
                             </div>
                             <div class="product-title">
                                 <a href="#">
-                                    <h3>YELLOW Tshirt</h3>
-                                    <span>$21</span>
+                                    <h3>Масло черного тмина 500 мл.</h3>
+                                    <span>20р</span>
                                 </a>
                             </div>
                         </div>
@@ -255,16 +237,13 @@
                             <img src="images/4.png" class="img-responsive" width="255" height="322" alt="">
                             <div class="product-hover">
                                 <div class="product-meta">
-                                    <a href="#"><i class="pe-7s-like"></i></a>
-                                    <a href="#"><i class="pe-7s-shuffle"></i></a>
-                                    <a href="#"><i class="pe-7s-clock"></i></a>
-                                    <a href="#"><i class="pe-7s-cart"></i>Add to Cart</a>
+                                    <a href="#"><i class="pe-7s-cart"></i>Добавить в корзину</a>
                                 </div>
                             </div>
                             <div class="product-title">
                                 <a href="#">
-                                    <h3>Cool lingerie</h3>
-                                    <span>$56</span>
+                                    <h3>Семена черного тмина 100 гр.</h3>
+                                    <span>2р</span>
                                 </a>
                             </div>
                         </div>
@@ -834,7 +813,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <p class="center">Made with <i class="fa fa-heart"></i> by <a href="https://revolthemes.net/" target="_blank">Revolthemes</a>. All Rights Reserved</p>
-                        
+
                     </div>
                 </div>
             </div>
