--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Масло черного тмина | Makemi - полезные продукты</title>
+        <title>Масло черного тмина | Cumin - полезные продукты из черного тмина</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="images/favicon.ico">
@@ -32,7 +32,7 @@
                         <div class="header-top-content">
                             <ul class="nav nav-pills navbar-left">
                                 <li><a href="#"><i class="pe-7s-call"></i><span> 8 029 123 45 67</span></a></li>
-                                <li><a href="#"><i class="pe-7s-mail"></i><span> info@makemi.by</span></a></li>
+                                <li><a href="#"><i class="pe-7s-mail"></i><span> info@сumin.by</span></a></li>
                                 <li><a href="#"><i class="pe-7s-call"></i><span> Заказать звонок</span></a></li>
                                 <li><a href="#"><i class="pe-7s-mail"></i><span> Написать нам</span></a></li>
                             </ul>
@@ -53,7 +53,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#"><b></b>Makemi</a>
+                        <a class="navbar-brand" href="#"><b>Cu</b>min</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -86,7 +86,7 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <img src="images/slider.jpg" alt="">
+                        <img src="images/slider5.jpg" alt="">
                         <div class="carousel-caption">
                             <h2>Масло <b>&</b> семена тмина</h2>
                             <h3>с доставкой по <Span>Беларуси</Span></h3>
@@ -134,64 +134,64 @@
                     <div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.2s">
                         <div class="product-item">
                             <img src="images/1.png" class="img-responsive" width="255" height="322" alt="">
-                            <div class="product-hover">
+                            <!--<div class="product-hover">
                                 <div class="product-meta">
                                     <a href="#"><i class="pe-7s-cart"></i>Добавить в корзину</a>
                                 </div>
-                            </div>
+                            </div>-->
                             <div class="product-title">
-                                <a href="#">
+
                                     <h3>Масло черного тмина 100 мл.</h3>
                                     <span>5р</span>
-                                </a>
+
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.4s">
                         <div class="product-item">
                             <img src="images/2.png" class="img-responsive" width="255" height="322" alt="">
-                            <div class="product-hover">
+                            <!--<div class="product-hover">
                                 <div class="product-meta">
                                     <a href="#"><i class="pe-7s-cart"></i>Добавить в корзину</a>
                                 </div>
-                            </div>
+                            </div>-->
                             <div class="product-title">
-                                <a href="#">
+
                                     <h3>Масло черного тмина 250 мл.</h3>
                                     <span>10р</span>
-                                </a>
+
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.6s">
                         <div class="product-item">
                             <img src="images/3.png" class="img-responsive" width="255" height="322" alt="">
-                            <div class="product-hover">
+                            <!--<div class="product-hover">
                                 <div class="product-meta">
                                     <a href="#"><i class="pe-7s-cart"></i>Добавить в корзину</a>
                                 </div>
-                            </div>
+                            </div>-->
                             <div class="product-title">
-                                <a href="#">
+
                                     <h3>Масло черного тмина 500 мл.</h3>
                                     <span>20р</span>
-                                </a>
+
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.8s">
                         <div class="product-item">
                             <img src="images/4.png" class="img-responsive" width="255" height="322" alt="">
-                            <div class="product-hover">
+                            <!--<div class="product-hover">
                                 <div class="product-meta">
                                     <a href="#"><i class="pe-7s-cart"></i>Добавить в корзину</a>
                                 </div>
-                            </div>
+                            </div>-->
                             <div class="product-title">
-                                <a href="#">
+
                                     <h3>Семена черного тмина 100 гр.</h3>
                                     <span>2р</span>
-                                </a>
+
                             </div>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                 <div class="row">
                     <div class="col-md-12 wow fadeInDown animated ">
                         <h1>+375 29 123 45 67</h1>
-                        <h2>Звоните по телефону, пишите в WhatsApp, Telegram или Viber — наши специалисты проконсультируют вас по вопросам покупки и употребления масла черного тмина!</h2>
+                        <h2>Позвоните и наши специалисты проконсультируют вас по вопросам покупки и употребления масла черного тмина!</h2>
                     </div>
                 </div>
             </div>
