--- a/index.html
+++ b/index.html
@@ -316,21 +316,16 @@
                 <div class="row">
                     <div class="col-md-6 wow fadeInLeft animated">
                         <div class="left-content">
-                            <h1><span></span>MAKEMI</h1>
+                            <h1><span>Cu</span>min</h1>
                             <h3>Мы будем рады встретиться с вами лично или через Интернет!</h3>
                             <p></p>
                             <div class="contact-info">
-                                <p><b>Главный офис:</b> Минск</p>
                                 <p><b>Телефон:</b> 8 029 123 45 67</p>
-                                <p><b>Почта:</b> info@makemi.by</p>
+                                <p><b>Почта:</b> info@cumin.by</p>
                             </div>
                             <div class="social-media">
                                 <ul>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                    <!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
                                 </ul>
                             </div>
                         </div>
@@ -349,18 +344,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" id="name" placeholder="Тема">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" id="name" placeholder="Сайт">
-                                    </div>
-                                </div>
-                            </div>
+
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="input-group">
@@ -385,7 +369,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <p class="center">Copyright &copy;<script>document.write(new Date().getFullYear());</script> Все права защищены | <i class="fa fa-heart-o" aria-hidden="true"></i> </a></p>
+                        <p class="center">Copyright &copy;<script>document.write(new Date().getFullYear());</script> Все права защищены | Cumin.by полезная продукция из тмина </a></p>
 
                     </div>
                 </div>
