--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
                         <div class="header-top-content">
                             <ul class="nav nav-pills navbar-left">
                                 <li><a href="#"><i class="pe-7s-call"></i><span> 8 029 123 45 67</span></a></li>
-                                <li><a href="#"><i class="pe-7s-mail"></i><span> info@сumin.by</span></a></li>
                                 <li><a href="#"><i class="pe-7s-call"></i><span> Заказать звонок</span></a></li>
-                                <li><a href="#"><i class="pe-7s-mail"></i><span> Написать нам</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -63,7 +61,6 @@
                             <li><a href="#">Польза тмина</a></li>
                             <li><a href="#">Производство</a></li>
                             <li><a href="#">Блог</a></li>
-                            <li><a href="#">Дилерам</a></li>
                             <li><a href="#">Контакты</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right cart-menu">
@@ -210,6 +207,76 @@
             </div>
         </section>
 
+        <section class="service-section">
+          <div class="container">
+              <div class="row">
+                  <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.1s">
+                      <div class="service-item">
+                          <img src="images/m1.png" width="100" height="100" alt="">
+                          <h3>Полезный продукт — экономия</h3>
+                          <p>Благодаря нашим продуктам люди значительно сокращают свои ежемесячные траты на витамины и различные биологические добавки.</p>
+                      </div>
+                  </div>
+                  <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.2s">
+                      <div class="service-item">
+                          <img src="images/m2.png" width="100" height="100" alt="">
+                          <h3>Правильное питание</h3>
+                          <p>Вы сможете сэкономить время для достижения нужного результата в области снижения веса, либо наборы массы.</p>
+                      </div>
+                  </div>
+                  <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.3s">
+                      <div class="service-item">
+                          <img src="images/m3.png" width="100" height="100" alt="">
+                          <h3>Nigela Sativa</h3>
+                          <p>По данным последних исследований только эфиопский сорт семян черного тмина Nigella Sativa имеет медицинские свойства. Благодаря использованию именно этого сорта наши продукты оказывают более сильный и быстрый эффект вашему здоровью.</p>
+                      </div>
+                  </div>
+                  <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.4s">
+                      <div class="service-item">
+                          <img src="images/m4.png" width="100" height="100" alt="">
+                          <h3>Первый холодный отжим</h3>
+                          <p>Только первый холодный отжим позволяет сохранить все полезные компоненты продукта. Вы платите деньги именно за пользу от продукта, а не просто за масло.</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+      <section class="service-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.4s">
+                    <div class="service-item">
+                        <img src="images/m5.png" width="100" height="100" alt="">
+                        <h3>100% концентрат</h3>
+                        <p>Мы не разбавляем свое масло с другими маслами — ваша безопасность для нас важнее. Разбавление масла черного тмина другими растительными маслами неизбежно приводит к снижению концентрации полезных микроэлементов, а в некоторых случаях может нанести вред организму.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.4s">
+                    <div class="service-item">
+                        <img src="images/m6.png" width="100" height="100" alt="">
+                        <h3>Условие хранения</h3>
+                        <p>Темное стекло наших бутылок соответствует всем международным стандартам в области хранения лекарств, произведено на заводе в Чехии. Вы получаете всегда свежий продукт, без потери полезных компонентов и с большим сроком годности.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.4s">
+                    <div class="service-item">
+                        <img src="images/m7.png" width="100" height="100" alt="">
+                        <h3>Внешний вид</h3>
+                        <p>Специально разработанная упаковка наших продуктов делает их отличным вариантом для подарка близким людям!</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.4s">
+                    <div class="service-item">
+                        <img src="images/m8.png" width="100" height="100" alt="">
+                        <h3>Доставка по всей Беларуси</h3>
+                        <p>Только первый холодный отжим позволяет сохранить все полезные компоненты продукта. Вы платите деньги именно за пользу от продукта, а не просто за масло.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
         <section class="review-section">
             <div class="container">
                 <div class="row">
@@ -251,13 +318,13 @@
                         <!-- Indicators -->
                         <ol class="carousel-indicators review-controlar">
                             <li data-target="#feedback" data-slide-to="0" class="active">
-                                <img src="images/member1.png" width="320" height="439" alt="">
+                                <img src="images/member1.jpg" width="100" height="100" alt="">
                             </li>
                             <li data-target="#feedback" data-slide-to="1">
-                                <img src="images/member2.png" width="320" height="439" alt="">
+                                <img src="images/member2.jpg" width="320" height="439" alt="">
                             </li>
                             <li data-target="#feedback" data-slide-to="2">
-                                <img src="images/member3.png" width="320" height="439" alt="">
+                                <img src="images/member3.jpg" width="320" height="439" alt="">
                             </li>
                         </ol>
                     </div>
