Преимущества и выгоды, фавиконка

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#"><b>Cu</b>min</a>
+                        <a class="navbar-brand" href="cumin.by"><b>Cu</b>min</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -210,28 +210,36 @@
         <section class="service-section">
           <div class="container">
               <div class="row">
-                  <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.1s">
+                  <div class="col-md-12">
+                      <div class="titie-section wow fadeInDown animated ">
+                          <h1>Преимущества и выгоды</h1>
+                          <br><br><br>
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-md-3 col-sm-6 ">
                       <div class="service-item">
                           <img src="images/m1.png" width="100" height="100" alt="">
                           <h3>Полезный продукт — экономия</h3>
                           <p>Благодаря нашим продуктам люди значительно сокращают свои ежемесячные траты на витамины и различные биологические добавки.</p>
                       </div>
                   </div>
-                  <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.2s">
+                  <div class="col-md-3 col-sm-6> ">
                       <div class="service-item">
                           <img src="images/m2.png" width="100" height="100" alt="">
                           <h3>Правильное питание</h3>
                           <p>Вы сможете сэкономить время для достижения нужного результата в области снижения веса, либо наборы массы.</p>
                       </div>
                   </div>
-                  <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.3s">
+                  <div class="col-md-3 col-sm-6 ">
                       <div class="service-item">
                           <img src="images/m3.png" width="100" height="100" alt="">
                           <h3>Nigela Sativa</h3>
                           <p>По данным последних исследований только эфиопский сорт семян черного тмина Nigella Sativa имеет медицинские свойства. Благодаря использованию именно этого сорта наши продукты оказывают более сильный и быстрый эффект вашему здоровью.</p>
                       </div>
                   </div>
-                  <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.4s">
+                  <div class="col-md-3 col-sm-6 ">
                       <div class="service-item">
                           <img src="images/m4.png" width="100" height="100" alt="">
                           <h3>Первый холодный отжим</h3>
@@ -245,28 +253,28 @@
       <section class="service-section">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.4s">
+                <div class="col-md-3 col-sm-6 ">
                     <div class="service-item">
                         <img src="images/m5.png" width="100" height="100" alt="">
                         <h3>100% концентрат</h3>
                         <p>Мы не разбавляем свое масло с другими маслами — ваша безопасность для нас важнее. Разбавление масла черного тмина другими растительными маслами неизбежно приводит к снижению концентрации полезных микроэлементов, а в некоторых случаях может нанести вред организму.</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.4s">
+                <div class="col-md-3 col-sm-6 ">
                     <div class="service-item">
                         <img src="images/m6.png" width="100" height="100" alt="">
                         <h3>Условие хранения</h3>
                         <p>Темное стекло наших бутылок соответствует всем международным стандартам в области хранения лекарств, произведено на заводе в Чехии. Вы получаете всегда свежий продукт, без потери полезных компонентов и с большим сроком годности.</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.4s">
+                <div class="col-md-3 col-sm-6 ">
                     <div class="service-item">
                         <img src="images/m7.png" width="100" height="100" alt="">
                         <h3>Внешний вид</h3>
                         <p>Специально разработанная упаковка наших продуктов делает их отличным вариантом для подарка близким людям!</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 wow fadeInRight animated" data-wow-delay="0.4s">
+                <div class="col-md-3 col-sm-6 ">
                     <div class="service-item">
                         <img src="images/m8.png" width="100" height="100" alt="">
                         <h3>Доставка по всей Беларуси</h3>
