--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="images/favicon.ico">
-
         <link rel="stylesheet" href="css/style.css">
-
-        <!--[if lt IE 9]>
-            <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-            <script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
-        <![endif]-->
     </head>
     <body>
         <!-- PRELOADER -->
@@ -51,14 +45,14 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="cumin.by"><b>Cu</b>min</a>
+                        <a class="navbar-brand" href="index.html"><b>Cu</b>min</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="#">Магазин</a></li>
-                            <li><a href="#">Польза тмина</a></li>
+                            <li class="active"><a href="index.html">Магазин</a></li>
+                            <li><a href="polza_tmina.html">Польза тмина</a></li>
                             <li><a href="#">Производство</a></li>
                             <li><a href="#">Блог</a></li>
                             <li><a href="#">Контакты</a></li>
