--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                             <li><a href="polza_tmina.html">Польза тмина</a></li>
                             <li><a href="#">Производство</a></li>
                             <li><a href="#">Блог</a></li>
+                            <li><a href="#">Отзывы</a></li>
                             <li><a href="#">Контакты</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right cart-menu">
