--- a/polza_tmina.html
+++ b/polza_tmina.html
@@ -55,6 +55,7 @@
                             <li class="active" ><a href="polza_tmina.html">Польза тмина</a></li>
                             <li><a href="#">Производство</a></li>
                             <li><a href="#">Блог</a></li>
+                            <li><a href="#">Отзывы</a></li>
                             <li><a href="#">Контакты</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right cart-menu">
@@ -75,7 +76,7 @@
 
                 <div class="col-sm-12">
                     <div >
-                        <h3> В последние годы значительно возрос интерес к лечению лекарственными растениями, т.е. фитотерапии. Например, в Германии 80% врачей всех специальности постоянно применяют в своей практике срёдства растительного происхождения, более 80% больных во всех странах хотя бы однажды лечились фитопрепаратами. Наиболее распространенным и широко применяемым в народной медицине во многих странах является черный тмин. В течении многих веков черный тмин в виде семян и масла широко используется миллионами людей во всем мире, особенно в странах Азии, Африки, на Ближнем Востоке как эффективное средство против многих заболеваний. В последние годы большое внимание на Западе уделяют исследованию чёрного тмина при лечении рака и СПИДа. <br><br></h3>
+                        <h3> В последние годы значительно возрос интерес к лечению лекарственными растениями, т.е. фитотерапии. Например, в Германии 80% врачей всех специальности постоянно применяют в своей практике средства растительного происхождения, более 80% больных во всех странах хотя бы однажды лечились фитопрепаратами. Наиболее распространенным и широко применяемым в народной медицине во многих странах является черный тмин. В течении многих веков черный тмин в виде семян и масла широко используется миллионами людей во всем мире, особенно в странах Азии, Африки, на Ближнем Востоке как эффективное средство против многих заболеваний. В последние годы большое внимание на Западе уделяют исследованию чёрного тмина при лечении рака и СПИДа. <br><br></h3>
 
                         <h1>Биология черного тмина <br><br></h1>
 
