--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <ul class="nav navbar-nav">
                             <li class="active"><a href="index.html">Магазин</a></li>
                             <li><a href="polza_tmina.html">Польза тмина</a></li>
-                            <li><a href="#">Производство</a></li>
+                            <li><a href="production.html">Производство</a></li>
                             <li><a href="#">Блог</a></li>
                             <li><a href="#">Отзывы</a></li>
                             <li><a href="#">Контакты</a></li>
