--- a/polza_tmina.html
+++ b/polza_tmina.html
@@ -53,7 +53,7 @@
                         <ul class="nav navbar-nav">
                             <li><a href="index.html">Магазин</a></li>
                             <li class="active" ><a href="polza_tmina.html">Польза тмина</a></li>
-                            <li><a href="#">Производство</a></li>
+                            <li><a href="production.html">Производство</a></li>
                             <li><a href="#">Блог</a></li>
                             <li><a href="#">Отзывы</a></li>
                             <li><a href="#">Контакты</a></li>
