добавлены новые страницы

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                             <li class="active"><a href="index.html">Магазин</a></li>
                             <li><a href="polza_tmina.html">Польза тмина</a></li>
                             <li><a href="production.html">Производство</a></li>
-                            <li><a href="#">Блог</a></li>
-                            <li><a href="#">Отзывы</a></li>
-                            <li><a href="#">Контакты</a></li>
+                            <li><a href="blog.html">Блог</a></li>
+                            <li><a href="review.html">Отзывы</a></li>
+                            <li><a href="contact.html">Контакты</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right cart-menu">
                         <!--<li><a href="#"><span> Корзина &nbsp;</span> <span class="shoping-cart">0</span></a></li>-->
