--- a/polza_tmina.html
+++ b/polza_tmina.html
@@ -54,7 +54,7 @@
                             <li><a href="index.html">Магазин</a></li>
                             <li class="active" ><a href="polza_tmina.html">Польза тмина</a></li>
                             <li><a href="production.html">Производство</a></li>
-                            <li><a href="#">Блог</a></li>
+                            <li><a href="blog.html">Блог</a></li>
                             <li><a href="#">Отзывы</a></li>
                             <li><a href="#">Контакты</a></li>
                         </ul>
