--- a/polza_tmina.html
+++ b/polza_tmina.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="ru">
     <head>
+        <meta http-equiv="Cache-Control" content="no-cache">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Польза продуктов из черного тмина</title>
