--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="ru">
     <head>
+        <meta http-equiv="Cache-Control" content="no-cache">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Отзывы наших покупателей</title>
@@ -125,6 +126,7 @@
                     </div>
                 </div>
             </div>
+            <br><br>
         </section>
 
         <footer class="footer">
