--- a/review.html
+++ b/review.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="ru">
     <head>
+        <meta http-equiv="Cache-Control" content="no-cache">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Отзывы наших покупателей</title>
@@ -66,35 +67,51 @@
             </nav>
         </header>
 
-        <section class="news-section">
+        <section class="review-section">
             <div class="container">
                 <div class="row">
                 </div>
-                <div class="row" >
-                    <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.2s">
-                        <div class="blog-item">
-                            <a href="#"><img src="images/blog1.jpg" width="350" height="262" alt=""></a>
-                            <h3>Почему масло должно быть неразбавленным</h3>
-                            <p>Масло черного тмина полезно в своем первозданном, неразбавленном виде — именно на неразбавленное масло рассчитаны все рецепты по его употреблению. Дело в том, что, к сожалению, многие производители в целях экономии стали разбавлять свою продукцию другими растительными маслами, а это приводит к следующим последствиям:</p>
-                            <a href="#">Читать дальше</a>
+                <div class="row">
+                    <div id="feedback" class="carousel slide feedback" data-ride="feedback">
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                                <!--<img src="images/member1.png" width="320" height="439" alt="">-->
+                                <div class="carousel-caption">
+                                    <p>Здравствуйте. Я пожилая женщина. Мне 60 лет. Страдала множеством болезней: Сахарный диабет, нарушение ЖКТ (мучали запоры), и по женской части были проблемы. По совету дочери начала пить масло Доктор Тмин. После 4 месяцев употребления нормализовался до положенного сахар; также стала ходить в туалет (раньше неделями не могла). Нормализовалось общее состояние организма. И перестали выходить выделения по женской части. До этого вообще не знала о существовании такого масла. Теперь только его и употребляю. Спасибо компании Макеми за такой не дорогой и очень качественный продукт. Теперь его рекомендую всем своим родственникам.</p>
+                                    <h3>- Светлана -</h3>
+                                    <span></span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <!--<img src="images/member2.png" width="320" height="439" alt="">-->
+                                <div class="carousel-caption">
+                                    <p>Ассаляму Алейкум. Приобрел масло Доктор Тмин у представителя в Казахстане. Масло реально на высшем уровне. Чистое без примесей. На рынке Казахстана такого еще не было. Чувствую прилив сил. Также даю детям. При заболевании детей 2-3 чайные ложки и нет ни температуры ни кашля ни насморка. Держите свое производство на таком же уровне. Пусть Аллах облегчит вам ваше полезное дело.</p>
+                                    <h3>- Александр -</h3>
+                                    <span></span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <!--<img src="images/member3.png" width="320" height="439" alt="">-->
+                                <div class="carousel-caption">
+                                    <p>Работаю воспитателем в детском саду более 30 лет. Все прекрасно знают, что значит работать с детьми дошкольного возраста. В следствие этого постоянные головные боли, нервный срыв, ухудшение пищеварительного процесса, плохой аппетит, высокое давление и много других болезней. Пользуюсь маслом черного тмина «Доктор Тмин» (раньше продавалось под названием Шифа) в течение 5 лет, дарованное Самим Всевышним, я чувствую себя на много лучше. Как, только начинает беспокоить что-то, сразу начинаю принимать масло черного тмина «Доктор Тмин». С уважением Валиева Изидья.</p>
+                                    <h3>- Изидья Валиева -</h3>
+                                    <span></span>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.4s">
-                        <div class="blog-item">
-                            <a href="#"><img src="images/blog2.jpg" width="350" height="262" alt=""></a>
-                            <h3>Про сертификат происхождения семян</h3>
-                            <p>Существуют разные сорта тмина. Насыщенность семян черного тмина полезными микроэлементами во многом зависит от места его произрастания. Наиболее удачное сочетание климатических условий для выращивания семян тмина, обладающих медицинскими свойствами, это:</p>
-                            <a href="#">Читать дальше</a>
-
-                        </div>
-                    </div>
-                    <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.6s">
-                        <div class="blog-item">
-                            <a href="#"><img src="images/blog3.jpg" width="350" height="262" alt=""></a>
-                            <h3>Первый холодный отжим</h3>
-                            <p>В случае с черным тмином очень важно, чтобы масло было получено именно путем первого холодного отжима — только так можно максимально сохранить его полезные свойства. Дело в том, что при горячем отжиме прессованию предшествует этап обработки семян в жаровнях — измельченные семена с добавлением воды обжаривают при температуре 100-110⁰С, после чего уже отжимают. </p>
-                            <a href="#">Читать дальше</a>
-                        </div>
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators review-controlar">
+                            <li data-target="#feedback" data-slide-to="0" class="active">
+                                <img src="images/member1.jpg" width="100" height="100" alt="">
+                            </li>
+                            <li data-target="#feedback" data-slide-to="1">
+                                <img src="images/member2.jpg" width="320" height="439" alt="">
+                            </li>
+                            <li data-target="#feedback" data-slide-to="2">
+                                <img src="images/member3.jpg" width="320" height="439" alt="">
+                            </li>
+                        </ol>
                     </div>
                 </div>
             </div>
