--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 wow fadeInRight animated">
-                        <form action="" method="" class="contact-form">
+                        <form action="send.php" method="post" class="contact-form">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="input-group">
