изменен адрес контактной почты

--- a/production.html
+++ b/production.html
@@ -127,7 +127,7 @@
                         <p></p>
                         <div class="contact-info">
                           <p><b>Телефон:</b> 8 029 123 45 67</p>
-                          <p><b>Почта:</b> info@cumin.by</p>
+                          <p><b>Почта:</b> cuminby@mail.ru</p>
                         </div>
                         <div class="social-media">
                           <ul>
