--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 <section class="new-section">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <!-- <div class="col-md-12">
         <div class="titie-section wow fadeInDown animated ">
           <h1>МАГАЗИН</h1>
         </div>
-      </div>
+      </div> -->
     </div>
     <div class="row">
       <div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.2s">
@@ -388,7 +388,7 @@
           <p></p>
           <div class="contact-info">
             <p><b>Телефон:</b> 8 029 123 45 67</p>
-            <p><b>Почта:</b> info@cumin.by</p>
+            <p><b>Почта:</b> cuminby@mail.ru</p>
           </div>
           <div class="social-media">
             <ul>
