--- a/polza_tmina.html
+++ b/polza_tmina.html
@@ -69,14 +69,7 @@
 
   <section class="news-section">
     <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-
-        </div>
-      </div>
-
       <div class="col-sm-12">
-        <div >
           <h3> В последние годы значительно возрос интерес к лечению лекарственными растениями, т.е. фитотерапии. Например, в Германии 80% врачей всех специальности постоянно применяют в своей практике средства растительного происхождения, более 80% больных во всех странах хотя бы однажды лечились фитопрепаратами. Наиболее распространенным и широко применяемым в народной медицине во многих странах является черный тмин. В течении многих веков черный тмин в виде семян и масла широко используется миллионами людей во всем мире, особенно в странах Азии, Африки, на Ближнем Востоке как эффективное средство против многих заболеваний. В последние годы большое внимание на Западе уделяют исследованию чёрного тмина при лечении рака и СПИДа. <br><br></h3>
 
           <h1>Биология черного тмина <br><br></h1>
@@ -88,9 +81,6 @@
             Ботаническое название — «Nigella sativa» (нигелла сатива) черный тмин. Семейство лютиковые — Carbuncular. Род насчитывает около 20 видов растений черного тмина, некоторые из них: Nigella Arvensis L. Nigella Sativa L. Nigella damascene L.</h3>
             <h1>Некоторые примеры научных исследований <br><br></h1>
             <h3>Начиная с 1959 года в мире проведено более 1000 научно-экспериментальных исследований лечебных свойств черного тмина. Их ошеломляющие результаты были опубликованы в научных статьях и докладах, в различных СМИ. В этом же году в черном тмине был выделен активный компонент который поддерживал состояние здоровья. Клинические испытания подтвердили эффективность черного тмина при лечении некоторых болезней. Это прекрасным образом подтвердило важнейшее значение черного тмина, о котором говорил свыше 1400 лет тому назад Пророк (Да благословит его Аллах и да приветствует).<br><br>Ибн Кайим Джавзия в книге «Медицина Пророка» вносит в список до 50 болезней, вьлеченных черным тмином. Исследование, проведенное в 1960 г. профессором Дахакна, доказало, что масло черного тмина превосходным образом применяется при лечении артрита как противовоспалительное средство.<br><br>В 1960 г. ученые Махфуз и его коллеги успешно применили масло черного тмина при лечении бронхиальной астмы и получили хороший эффект.<br><br>В 1979 г. исследование доктора Агарвала доказало, что масло черного тмина увеличивает молоко кормящих грудью матерей.<br><br>В 1986 г. Египетские ученые Кади и Кандил провели научное исследование с целью изучения влияния черного тмина на иммунитет человека. Больным с пониженной иммунной системой они давали два раза в день 1 грамм (семян) черного тмина в течение четырех недель. После окончания эксперимента в организме увеличилось число Т-лимфоцитов, отвечающих за реакции отторжения трансплантата.<br><br>На экспериментах с применением черного тмина в крови испытываемого на 72% увеличилось количество Т- лимфоцитов, Т-киллеров и других клеток, отвечающих за исцеление от болезней, реакции отторжения трансплантата и усиление защитных сил организма. Эти результаты могут иметь большое практическое значение и играть важную роль в лечении рака, СПИДа и многих других болезней, связанных с понижением иммунной системы.<br><br>В 1989 r. B Пакистанском медицинском журнале появилась статья о феноменальных противогрибковых свойствах масла черного тмина.<br><br>В 1991-1993 г. доктор Керала в Индийском исследовательском центре Амала Нагар провел исследование по использованию возможностей черного тмина в лечении рака. Результаты исследования показали, что применение черного тмина останавливает развитие раковых клеток и является мощным агентом антиопухоли.<br><br>Махфуз и его коллеги в 1991 г. провели исследование, экспериментально доказав эффективность масла черного тмина в лечении бронхиальной астмы и аллергии.<br><br>В 1992 г. в медицинском департаменте университета Дакке (Бангладеш) производилось исследование антибактериальных свойствах масла черного тмина в сравнении с пятью сильными антибиотиками: ампицилином, тетрациклином, Ко-тримоксазолом, гентамицином и налидиксовой кислотой.<br><br>Факты, бесспорно, приводят в восхищение — масло черного тмина показало себя как более эффективное средство против многих бактерий, включая даже те, которые оказывают наиболее сильное сопротивление медицинским препаратам - V.холера, E.коли (инфекция, которая часто встречается в сыром мясе) и др.<br><br></h3>
-          </div>
-
-
         </div>
       </section>
 
@@ -111,7 +101,7 @@
                 <p></p>
                 <div class="contact-info">
                   <p><b>Телефон:</b> 8 029 123 45 67</p>
-                  <p><b>Почта:</b> info@cumin.by</p>
+                  <p><b>Почта:</b> cuminby@mail.ru</p>
                 </div>
                 <div class="social-media">
                   <ul>
