--- a/polza_tmina.html
+++ b/polza_tmina.html
@@ -56,8 +56,8 @@
             <li class="active" ><a href="polza_tmina.html">Польза тмина</a></li>
             <li><a href="production.html">Производство</a></li>
             <li><a href="blog.html">Блог</a></li>
-            <li><a href="#">Отзывы</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a href="review.html">Отзывы</a></li>
+            <li><a href="contact.html">Контакты</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right cart-menu">
             <!--<li><a href="#"><span> Корзина &nbsp;</span> <span class="shoping-cart">0</span></a></li>-->
