--- a/thanks.html
+++ b/thanks.html
@@ -56,8 +56,8 @@
             <li><a href="polza_tmina.html">Польза тмина</a></li>
             <li><a href="production.html">Производство</a></li>
             <li><a href="blog.html">Блог</a></li>
-            <li><a href="#">Отзывы</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a href="review.html">Отзывы</a></li>
+            <li><a href="contact.html">Контакты</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right cart-menu">
             <!--<li><a href="#"><span> Корзина &nbsp;</span> <span class="shoping-cart">0</span></a></li>-->
@@ -79,7 +79,7 @@
         </div>
       </section>
 
-      
+
 
       <!-- JQUERY -->
       <script src="js/vendor/jquery-1.11.2.min.js"></script>
