--- a/index.html
+++ b/index.html
@@ -69,14 +69,6 @@
 
   <section class="slider-section">
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators slider-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
           <img src="images/slider5.jpg" alt="">
@@ -86,110 +78,52 @@
             <a href="#">Купить</a>
           </div>
         </div>
-        <!--<div class="item">
-        <img src="images/slider.jpg" width="1280" height="600" alt="">
-        <div class="carousel-caption">
-        <h2>Масло <b>&</b> семена тмина</h2>
-        <h3>с доставкой по <Span>Беларуси</Span></h3>
-        <a href="#">Купить</a>
       </div>
     </div>
-    <div class="item ">
-    <img src="images/slider.jpg" width="1280" height="600" alt="">
-    <div class="carousel-caption">
-    <h2>Масло <b>&</b> семена тмина</h2>
-    <h3>с доставкой по <Span>Беларуси</Span></h3>
-    <a href="#">Купить</a>
-  </div>
-</div>-->
-</div>
+  </section>
 
-<!-- Controls -->
-<!--<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-<span class="pe-7s-angle-left glyphicon-chevron-left" aria-hidden="true"></span>
-</a>
-<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-<span class="pe-7s-angle-right glyphicon-chevron-right" aria-hidden="true"></span>
-</a>-->
-</div>
-</section>
-
-<section class="new-section">
-  <div class="container">
-    <div class="row">
-      <!-- <div class="col-md-12">
-        <div class="titie-section wow fadeInDown animated ">
-          <h1>МАГАЗИН</h1>
+  <section class="new-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.2s">
+          <div class="product-item">
+            <img src="images/1.png" class="img-responsive" width="255" height="322" alt="">
+            <div class="product-title">
+              <h3>Масло черного тмина 100 мл.</h3>
+              <span>5р</span>
+            </div>
+          </div>
         </div>
-      </div> -->
-    </div>
-    <div class="row">
-      <div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.2s">
+      </div>
+      <div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.4s">
         <div class="product-item">
-          <img src="images/1.png" class="img-responsive" width="255" height="322" alt="">
-          <!--<div class="product-hover">
-          <div class="product-meta">
-          <a href="#"><i class="pe-7s-cart"></i>Добавить в корзину</a>
+          <img src="images/2.png" class="img-responsive" width="255" height="322" alt="">
+          <div class="product-title">
+            <h3>Масло черного тмина 250 мл.</h3>
+            <span>10р</span>
+          </div>
         </div>
-      </div>-->
-      <div class="product-title">
-
-        <h3>Масло черного тмина 100 мл.</h3>
-        <span>5р</span>
-
+      </div>
+      <div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.6s">
+        <div class="product-item">
+          <img src="images/3.png" class="img-responsive" width="255" height="322" alt="">
+          <div class="product-title">
+            <h3>Масло черного тмина 500 мл.</h3>
+            <span>20р</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.8s">
+        <div class="product-item">
+          <img src="images/4.png" class="img-responsive" width="255" height="322" alt="">
+          <div class="product-title">
+            <h3>Семена черного тмина 100 гр.</h3>
+            <span>2р</span>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  <div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.4s">
-    <div class="product-item">
-      <img src="images/2.png" class="img-responsive" width="255" height="322" alt="">
-      <!--<div class="product-hover">
-      <div class="product-meta">
-      <a href="#"><i class="pe-7s-cart"></i>Добавить в корзину</a>
-    </div>
-  </div>-->
-  <div class="product-title">
-
-    <h3>Масло черного тмина 250 мл.</h3>
-    <span>10р</span>
-
-  </div>
-</div>
-</div>
-<div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.6s">
-  <div class="product-item">
-    <img src="images/3.png" class="img-responsive" width="255" height="322" alt="">
-    <!--<div class="product-hover">
-    <div class="product-meta">
-    <a href="#"><i class="pe-7s-cart"></i>Добавить в корзину</a>
-  </div>
-</div>-->
-<div class="product-title">
-
-  <h3>Масло черного тмина 500 мл.</h3>
-  <span>20р</span>
-
-</div>
-</div>
-</div>
-<div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.8s">
-  <div class="product-item">
-    <img src="images/4.png" class="img-responsive" width="255" height="322" alt="">
-    <!--<div class="product-hover">
-    <div class="product-meta">
-    <a href="#"><i class="pe-7s-cart"></i>Добавить в корзину</a>
-  </div>
-</div>-->
-<div class="product-title">
-
-  <h3>Семена черного тмина 100 гр.</h3>
-  <span>2р</span>
-
-</div>
-</div>
-</div>
-</div>
-</div>
 </section>
 
 <section class="offer-section">
@@ -275,9 +209,7 @@
     </div>
   </div>
 </section>
-
-
-<section class="review-section">
+<section class="news-section">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -286,47 +218,37 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div id="feedback" class="carousel slide feedback" data-ride="feedback">
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <!--<img src="images/member1.png" width="320" height="439" alt="">-->
-            <div class="carousel-caption">
-              <p>Здравствуйте. Я пожилая женщина. Мне 60 лет. Страдала множеством болезней: Сахарный диабет, нарушение ЖКТ (мучали запоры), и по женской части были проблемы. По совету дочери начала пить масло Доктор Тмин. После 4 месяцев употребления нормализовался до положенного сахар; также стала ходить в туалет (раньше неделями не могла). Нормализовалось общее состояние организма. И перестали выходить выделения по женской части. До этого вообще не знала о существовании такого масла. Теперь только его и употребляю. Спасибо компании Макеми за такой не дорогой и очень качественный продукт. Теперь его рекомендую всем своим родственникам.</p>
-              <h3>- Светлана -</h3>
-              <span></span>
-            </div>
-          </div>
-          <div class="item">
-            <!--<img src="images/member2.png" width="320" height="439" alt="">-->
-            <div class="carousel-caption">
-              <p>Ассаляму Алейкум. Приобрел масло Доктор Тмин у представителя в Казахстане. Масло реально на высшем уровне. Чистое без примесей. На рынке Казахстана такого еще не было. Чувствую прилив сил. Также даю детям. При заболевании детей 2-3 чайные ложки и нет ни температуры ни кашля ни насморка. Держите свое производство на таком же уровне. Пусть Аллах облегчит вам ваше полезное дело.</p>
-              <h3>- Александр -</h3>
-              <span></span>
-            </div>
-          </div>
-          <div class="item">
-            <!--<img src="images/member3.png" width="320" height="439" alt="">-->
-            <div class="carousel-caption">
-              <p>Работаю воспитателем в детском саду более 30 лет. Все прекрасно знают, что значит работать с детьми дошкольного возраста. В следствие этого постоянные головные боли, нервный срыв, ухудшение пищеварительного процесса, плохой аппетит, высокое давление и много других болезней. Пользуюсь маслом черного тмина «Доктор Тмин» (раньше продавалось под названием Шифа) в течение 5 лет, дарованное Самим Всевышним, я чувствую себя на много лучше. Как, только начинает беспокоить что-то, сразу начинаю принимать масло черного тмина «Доктор Тмин». С уважением Валиева Изидья.</p>
-              <h3>- Изидья Валиева -</h3>
-              <span></span>
-            </div>
-          </div>
+    <div class="col-sm-12">
+      <div >
+        <div>
+          <h2>Светлана</h2>
+          <span></span>
+
+          <h3>Здравствуйте. Я пожилая женщина. Мне 60 лет. Страдала множеством болезней: Сахарный диабет, нарушение ЖКТ (мучали запоры), и по женской части были проблемы. По совету дочери начала пить масло Доктор Тмин. После 4 месяцев употребления нормализовался до положенного сахар; также стала ходить в туалет (раньше неделями не могла). Нормализовалось общее состояние организма. И перестали выходить выделения по женской части. До этого вообще не знала о существовании такого масла. Теперь только его и употребляю. Спасибо компании Макеми за такой не дорогой и очень качественный продукт. Теперь его рекомендую всем своим родственникам.</h3>
         </div>
-        <!-- Indicators -->
-        <ol class="carousel-indicators review-controlar">
-          <li data-target="#feedback" data-slide-to="0" class="active">
-            <img src="images/member1.jpg" width="100" height="100" alt="">
-          </li>
-          <li data-target="#feedback" data-slide-to="1">
-            <img src="images/member2.jpg" width="320" height="439" alt="">
-          </li>
-          <li data-target="#feedback" data-slide-to="2">
-            <img src="images/member3.jpg" width="320" height="439" alt="">
-          </li>
-        </ol>
+      </div>
+      <div>
+        <div>
+          <h2>Александр</h2>
+          <span></span>
+
+          <h3>Ассаляму Алейкум. Приобрел масло Доктор Тмин у представителя в Казахстане. Масло реально на высшем уровне. Чистое без примесей. На рынке Казахстана такого еще не было. Чувствую прилив сил. Также даю детям. При заболевании детей 2-3 чайные ложки и нет ни температуры ни кашля ни насморка. Держите свое производство на таком же уровне. Пусть Аллах облегчит вам ваше полезное дело.</h3>
+        </div>
+      </div>
+      <div>
+        <div>
+          <h2>Изидья Валиева</h2>
+          <span></span>
+
+          <h3>Работаю воспитателем в детском саду более 30 лет. Все прекрасно знают, что значит работать с детьми дошкольного возраста. В следствие этого постоянные головные боли, нервный срыв, ухудшение пищеварительного процесса, плохой аппетит, высокое давление и много других болезней. Пользуюсь маслом черного тмина «Доктор Тмин» (раньше продавалось под названием Шифа) в течение 5 лет, дарованное Самим Всевышним, я чувствую себя на много лучше. Как, только начинает беспокоить что-то, сразу начинаю принимать масло черного тмина «Доктор Тмин». С уважением Валиева Изидья. <br><br> </h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="titie-section wow fadeInDown animated ">
+        <h1><a href="review.html">Читать все отзывы</a></h1>
       </div>
     </div>
   </div>
