--- a/production.html
+++ b/production.html
@@ -56,8 +56,8 @@
             <li><a href="polza_tmina.html">Польза тмина</a></li>
             <li class="active"><a href="production.html">Производство</a></li>
             <li><a href="blog.html">Блог</a></li>
-            <li><a href="#">Отзывы</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a href="review.html">Отзывы</a></li>
+            <li><a href="contact.html">Контакты</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right cart-menu">
             <!--<li><a href="#"><span> Корзина &nbsp;</span> <span class="shoping-cart">0</span></a></li>-->
@@ -69,10 +69,6 @@
 
   <section class="news-section">
     <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-        </div>
-      </div>
       <div class="col-sm-12">
         <div >
           <h1>Производство компании Makemi<br><br></h1>
