--- a/review.html
+++ b/review.html
@@ -67,51 +67,32 @@
     </nav>
   </header>
 
-  <section class="review-section">
+  <section class="news-section">
     <div class="container">
-      <div class="row">
-      </div>
-      <div class="row">
-        <div id="feedback" class="carousel slide feedback" data-ride="feedback">
-          <!-- Wrapper for slides -->
-          <div class="carousel-inner" role="listbox">
-            <div class="item active">
-              <!--<img src="images/member1.png" width="320" height="439" alt="">-->
-              <div class="carousel-caption">
-                <p>Здравствуйте. Я пожилая женщина. Мне 60 лет. Страдала множеством болезней: Сахарный диабет, нарушение ЖКТ (мучали запоры), и по женской части были проблемы. По совету дочери начала пить масло Доктор Тмин. После 4 месяцев употребления нормализовался до положенного сахар; также стала ходить в туалет (раньше неделями не могла). Нормализовалось общее состояние организма. И перестали выходить выделения по женской части. До этого вообще не знала о существовании такого масла. Теперь только его и употребляю. Спасибо компании Макеми за такой не дорогой и очень качественный продукт. Теперь его рекомендую всем своим родственникам.</p>
-                <h3>- Светлана -</h3>
-                <span></span>
-              </div>
-            </div>
-            <div class="item">
-              <!--<img src="images/member2.png" width="320" height="439" alt="">-->
-              <div class="carousel-caption">
-                <p>Ассаляму Алейкум. Приобрел масло Доктор Тмин у представителя в Казахстане. Масло реально на высшем уровне. Чистое без примесей. На рынке Казахстана такого еще не было. Чувствую прилив сил. Также даю детям. При заболевании детей 2-3 чайные ложки и нет ни температуры ни кашля ни насморка. Держите свое производство на таком же уровне. Пусть Аллах облегчит вам ваше полезное дело.</p>
-                <h3>- Александр -</h3>
-                <span></span>
-              </div>
-            </div>
-            <div class="item">
-              <!--<img src="images/member3.png" width="320" height="439" alt="">-->
-              <div class="carousel-caption">
-                <p>Работаю воспитателем в детском саду более 30 лет. Все прекрасно знают, что значит работать с детьми дошкольного возраста. В следствие этого постоянные головные боли, нервный срыв, ухудшение пищеварительного процесса, плохой аппетит, высокое давление и много других болезней. Пользуюсь маслом черного тмина «Доктор Тмин» (раньше продавалось под названием Шифа) в течение 5 лет, дарованное Самим Всевышним, я чувствую себя на много лучше. Как, только начинает беспокоить что-то, сразу начинаю принимать масло черного тмина «Доктор Тмин». С уважением Валиева Изидья.</p>
-                <h3>- Изидья Валиева -</h3>
-                <span></span>
-              </div>
-            </div>
+      <div class="col-sm-12">
+        <div >
+          <div>
+            <h2>Светлана</h2>
+            <span></span>
+
+            <h3>Здравствуйте. Я пожилая женщина. Мне 60 лет. Страдала множеством болезней: Сахарный диабет, нарушение ЖКТ (мучали запоры), и по женской части были проблемы. По совету дочери начала пить масло Доктор Тмин. После 4 месяцев употребления нормализовался до положенного сахар; также стала ходить в туалет (раньше неделями не могла). Нормализовалось общее состояние организма. И перестали выходить выделения по женской части. До этого вообще не знала о существовании такого масла. Теперь только его и употребляю. Спасибо компании Макеми за такой не дорогой и очень качественный продукт. Теперь его рекомендую всем своим родственникам.</h3>
           </div>
-          <!-- Indicators -->
-          <ol class="carousel-indicators review-controlar">
-            <li data-target="#feedback" data-slide-to="0" class="active">
-              <img src="images/member1.jpg" width="100" height="100" alt="">
-            </li>
-            <li data-target="#feedback" data-slide-to="1">
-              <img src="images/member2.jpg" width="320" height="439" alt="">
-            </li>
-            <li data-target="#feedback" data-slide-to="2">
-              <img src="images/member3.jpg" width="320" height="439" alt="">
-            </li>
-          </ol>
+        </div>
+        <div>
+          <div>
+            <h2>Александр</h2>
+            <span></span>
+
+            <h3>Ассаляму Алейкум. Приобрел масло Доктор Тмин у представителя в Казахстане. Масло реально на высшем уровне. Чистое без примесей. На рынке Казахстана такого еще не было. Чувствую прилив сил. Также даю детям. При заболевании детей 2-3 чайные ложки и нет ни температуры ни кашля ни насморка. Держите свое производство на таком же уровне. Пусть Аллах облегчит вам ваше полезное дело.</h3>
+          </div>
+        </div>
+        <div>
+          <div>
+            <h2>Изидья Валиева</h2>
+            <span></span>
+
+            <h3>Работаю воспитателем в детском саду более 30 лет. Все прекрасно знают, что значит работать с детьми дошкольного возраста. В следствие этого постоянные головные боли, нервный срыв, ухудшение пищеварительного процесса, плохой аппетит, высокое давление и много других болезней. Пользуюсь маслом черного тмина «Доктор Тмин» (раньше продавалось под названием Шифа) в течение 5 лет, дарованное Самим Всевышним, я чувствую себя на много лучше. Как, только начинает беспокоить что-то, сразу начинаю принимать масло черного тмина «Доктор Тмин». С уважением Валиева Изидья.</h3>
+          </div>
         </div>
       </div>
     </div>
