--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
                 </div>
               </div>
             </div>
-          </form>
+          </form><br><br>
         </div>
       </div>
     </div>
