цвет футера, убран топ хедер

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  <section class="header-top-section">
+  <!-- <section class="header-top-section">
     <div class="container">
       <div class="row">
         <div  class="col-md-6">
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <header class="header-section">
     <nav class="navbar navbar-default">
