input aria изменен цвет, убраны шапки

--- a/contact.html
+++ b/contact.html
@@ -105,8 +105,8 @@
               </div>
             </div>
           </form><br><br>
-        </div>
-      </div>
+        </div><br><br>
+      </div><br><br>
     </div>
   </section>
 
