--- a/blog.html
+++ b/blog.html
@@ -82,6 +82,163 @@
         </div>
       </div><br><br>
     </div><br><br>
+
+    <div class="container">
+      <div class="row" >
+        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.2s">
+          <div class="blog-item">
+            <a href="#"><img src="images/blog4.jpg" width="350" height="262" alt=""></a>
+            <h3>Применение черного тмина при инфекционных заболеваниях</h3>
+            <p>Очищенные от кожицы 1-2 дольки чеснока натереть нa мелкой терке, смешать с 1 чайной ложкой черного тмина и с </p>
+            <a href="#">Читать дальше</a>
+          </div>
+        </div>
+        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.4s">
+          <div class="blog-item">
+            <a href="#"><img src="images/blog5.jpg" width="350" height="262" alt=""></a>
+            <h3>Применение черного тмина при заболеваниях опорно-двигательной системы</h3>
+            <p>Ревматизм и мышечные боли -
+              Немного нагреть небольшое количество черного тмина, смешанного с оливковым маслом, и интенсивно растереть больное место. Перед сном </p>
+            <a href="#">Читать дальше</a>
+
+          </div>
+        </div>
+        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.6s">
+          <div class="blog-item">
+            <a href="#"><img src="images/blog6.jpg" width="350" height="262" alt=""></a>
+            <h3>Применение черного тмина при онкологических заболеванияхы</h3>
+            <p>Рак.
+              Рекомендуется при раке употреблять черный тмин с чесноком. Для профилактики</p>
+            <a href="#">Читать дальше</a>
+          </div>
+        </div>
+      </div><br><br>
+    </div><br><br>
+
+    <div class="container">
+      <div class="row" >
+        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.2s">
+          <div class="blog-item">
+            <a href="#"><img src="images/blog7.jpg" width="350" height="262" alt=""></a>
+            <h3>Применение черного тмина при кожных заболеваниях</h3>
+            <p>
+              Заболевании кожи лица.
+              Смешать 1/3 ложки масла черного тмина с 1 столовой ложкой оливкового масла. Полученной смесью растереть лицо и оставить на час. Затем</p>
+            <a href="#">Читать дальше</a>
+          </div>
+        </div>
+        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.4s">
+          <div class="blog-item">
+            <a href="#"><img src="images/blog8.jpg" width="350" height="262" alt=""></a>
+            <h3>Применение черного тмина при заболеваниях желез внутренних секреций</h3>
+            <p>Взять 2 кг меда, добавить 10-15 грамм пчелиного маточного молока, размешать. Добавить к смеси стакан молотого чёрного тмина и размещать хорошенько. Принимать по</p>
+            <a href="#">Читать дальше</a>
+
+          </div>
+        </div>
+        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.6s">
+          <div class="blog-item">
+            <a href="#"><img src="images/blog9.jpg" width="350" height="262" alt=""></a>
+            <h3>Применение черного тмина при заболеваниях мочеполовой системы</h3>
+            <p>Заболевания почек.
+              1 чайную ложку листьев брусники поместить в фарфоровый чайник и заварить стаканом крутого кипятка, после охлаждения добавить в настой 1 чайную ложку масла</p>
+            <a href="#">Читать дальше</a>
+          </div>
+        </div>
+      </div><br><br>
+    </div><br><br>
+
+    <div class="container">
+      <div class="row" >
+        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.2s">
+          <div class="blog-item">
+            <a href="#"><img src="images/blog10.jpg" width="350" height="262" alt=""></a>
+            <h3>Применение черного тмина при нарушении обмена веществ</h3>
+            <p>Общая слабость.
+              Смешать 10 капель масла черного тмина со стаканом апельсинового сока и принимать полученный напиток в течение 10 дней сразу после пробуждения. ВАЖНО:</p>
+            <a href="#">Читать дальше</a>
+          </div>
+        </div>
+        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.4s">
+          <div class="blog-item">
+            <a href="#"><img src="images/blog11.jpg" width="350" height="262" alt=""></a>
+            <h3>Применение черного тмина при женских заболеваниях</h3>
+            <p>Для облегчения родов.
+              Одно из лучших средств для облегчения боли при родах. Разогреть черный тмин с медом и пить.
+              Мастит.Втирать в область</p>
+            <a href="#">Читать дальше</a>
+
+          </div>
+        </div>
+        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.6s">
+          <div class="blog-item">
+            <a href="#"><img src="images/blog12.jpg" width="350" height="262" alt=""></a>
+            <h3>Применение черного тмина при мужских заболеваниях</h3>
+            <p>При простатите.
+              Смешать 1 кг пчелиного мёда с 7 столовыми ложками молотого чёрного тмина, принимать утром и вечером, за 2 часа до еды по</p>
+            <a href="#">Читать дальше</a>
+          </div>
+        </div>
+      </div><br><br>
+    </div><br><br>
+
+    <div class="container">
+      <div class="row" >
+        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.2s">
+          <div class="blog-item">
+            <a href="#"><img src="images/blog13.jpg" width="350" height="262" alt=""></a>
+            <h3>Применение черного тмина при заболеваниях желудочно-кишечной системы</h3>
+            <p>Язвенная болезнь желудка и 12 перстной кишки.
+10 капель масла черного тмина с 1 чашкой меда, ежедневно по утрам натощак употребляйте 1 ч.ложку полученной смеси. Затем</p>
+            <a href="#">Читать дальше</a>
+          </div>
+        </div>
+        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.4s">
+          <div class="blog-item">
+            <a href="#"><img src="images/blog14.jpg" width="350" height="262" alt=""></a>
+            <h3>Применение черного тмина при заболеваниях дыхательной системы</h3>
+            <p>Кашель различного происхождения.
+              Утром натощак принимать 0,5 чайной ложки масла черного тмина. После этого не пить 2 часа воду. Затем растереть грудь маслом черного тмина, разведенного с</p>
+            <a href="#">Читать дальше</a>
+
+          </div>
+        </div>
+        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.6s">
+          <div class="blog-item">
+            <a href="#"><img src="images/blog15.jpg" width="350" height="262" alt=""></a>
+            <h3>Применение черного тмина при заболеваниях сердечно-сосудистой системы </h3>
+            <p>Ревматизм и мышечные боли.
+              — Немного нагреть небольшое количество черного тмина, смешанного с оливковым маслом,`и интенсивно растереть больное место. Также перед сном</p>
+            <a href="#">Читать дальше</a>
+          </div>
+        </div>
+      </div><br><br>
+    </div><br><br>
+
+    <div class="container">
+      <div class="row" >
+        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.2s">
+          <div class="blog-item">
+            <a href="#"><img src="images/blog16.jpg" width="350" height="262" alt=""></a>
+            <h3>Применение черного тмина при заболеваниях нервной системы</h3>
+            <p>Головные боли.
+              1 ст. ложка молотого черного тмина, 1 ст. ложка молотых семян аниса (anise seed), 1 ст.ложка молотой гвоздики (cloves). Принимать по 1 чайной ложке за 15-30 мштут перед едой утром и вечером. Держать смесь во рту до тех пор</p>
+            <a href="#">Читать дальше</a>
+          </div>
+        </div>
+        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.4s">
+          <div class="blog-item">
+            <a href="#"><img src="images/blog17.jpg" width="350" height="262" alt=""></a>
+            <h3>Применение черного тмина при ЛОР заболеваниях</h3>
+            <p>Боль в ушах.
+              На 3 дня замочить 1 дольку свежего чеснока в 2-х чайных ложках масла черного тмина. Процедить. Закапывать по</p>
+            <a href="#">Читать дальше</a>
+          </div>
+        </div>
+        
+      </div><br><br>
+    </div><br><br>
+
   </section>
 
 
