--- a/production.html
+++ b/production.html
@@ -60,7 +60,35 @@
         <div >
           <h1>Производство компании Makemi<br><br></h1>
           <h3> Производство расположено территории Республики Башкортостан, фабрика открыта в 2014 году и на данный момент способна выпускать 20 000 бутылок масла черного тмина ежемесячно.<br><br></h3>
+          <div class="row">
+            <div class="col-md-3 col-sm-6 ">
+              <div class="service-item">
+                <img src="images/prod1.jpg" class="img-responsive" alt="">
+                <br>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-6> ">
+              <div class="service-item">
+                <img src="images/prod2.jpg" class="img-responsive" alt="">
+                <br>
+              </div>
+            </div>
+          </div>
           <h3>Производство соответствует всем современным нормам, продукция сертифицирована, соблюдены условия хранения сырья и готовой продукции.<br><br></h3>
+          <div class="row">
+            <div class="col-md-3 col-sm-6 ">
+              <div class="service-item">
+                <img src="images/prod3.jpg" class="img-responsive" alt="">
+                <br>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-6> ">
+              <div class="service-item">
+                <img src="images/prod4.jpg" class="img-responsive" alt="">
+                <br>
+              </div>
+            </div>
+          </div>
           <h1>Сырье: качество и сертификация<br><br></h1>
           <h3>Существуют разные сорта черного тмина. Насыщенность его семян полезными микроэлементами во многом зависит от места произрастания. По данным последних исследований (университет города Рияд, Саудовская Аравия) только сорт Nigella Sativa имеет медицинские свойства. Он распространен в основном в Эфиопии, из-за чего большинство производителей старается выдать свой продукт именно за эфиопское масло, но часто это всего лишь маркетинговый ход.<br><br></h3>
           <h3>У бренда Makemi заключен государственный контракт на прямые оптовые поставки семян черного тмина из Эфиопии. Мы получаем сырье наилучшего качества и максимально бережно относимся к нему при производстве.
@@ -69,10 +97,28 @@
             <h3>В случае с черным тмином очень важно, чтобы масло было получено именно путем первого холодного отжима — только так можно максимально сохранить его полезные свойства. Дело в том, что при горячем отжиме прессованию предшествует этап обработки семян в жаровнях — измельченные семена с добавлением воды обжаривают при температуре 100-110⁰С, после чего уже отжимают.
               Такой способ позволяет получать из семян черного тмина почти в два раза больше масла, чем при холодном   отжиме, что делает его очень привлекательным для производителя. Но высокие температуры и фильтрация, использующаяся при горячем отжиме, к сожалению, уничтожают значительную часть полезных микроэлементов и витаминов, содержащихся в черном тмине.
               Холодный отжим – процесс получение масла из целых семян черного тмина методом прессования при низких температурах. Масла при холодном отжиме получается значительно меньше, зато повышается его качество. Это лишний раз доказывает нам, что хорошее масло не может стоить дешево — ведь только метод холодного прессования может обеспечить маслу натуральность, высокое качество и сохранить все полезные свойства. <br><br></h3>
+
+              <iframe width="896" height="507" src="https://www.youtube.com/embed/BR2n803e_IY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
               <h3>Для производства масла черного тмина «Доктор тмин» компания Makemi использует исключительно первый холодный отжим эфиопского сорта семян. После отжима мы очищаем масло методом отстаивания (2-3 недели) в емкостях собственной разработки, которые не дают маслу контактировать с воздухом и окисляться.
                 Также важно отметить, что можно пить только масло черного тмина первого отжима, т.е. выжатое из семян, а не из уже использованного жмыха. К сожалению, некоторые производители, в целях снижения себестоимости, пытаются отжать сырье несколько раз, что делает их продукцию практически бесполезной, а иногда и вредной для организма. Дело в том, что после первого отжима в прессованных семенах практически не остается полезных веществ.<br><br></h3>
                 <h1>Розлив и особенности упаковки</h1>
                 <h3>Для розлива масла черного тмина «Доктор тмин» компания Makemi использует бутылки из специального сертифицированного темного стекла, которые производятся в Европе на заказ, так как, к сожалению, на сегодняшний день в России тару необходимого качества по приемлемым условиям практически невозможно найти.<br><br></h3>
+
+                <div class="row">
+                  <div class="col-md-3 col-sm-6 ">
+                    <div class="service-item">
+                      <img src="images/prod5.jpg" class="img-responsive" alt="">
+                      <br>
+                    </div>
+                  </div>
+                  <div class="col-md-3 col-sm-6> ">
+                    <div class="service-item">
+                      <br>
+                    </div>
+                  </div>
+                </div>
+
                 <h3>Дело в том, что прямые солнечные лучи вредны масла черного тмина, поэтому его необходимо хранить именно в темной стеклянной упаковке. Стекло помогает сохранить полезные свойства продукта и, в отличие от пластика, не вступает с ним химическую реакцию.
                   Следующий важный, но очень капризный элемент упаковки нашего масла — это металлическая крышка. К сожалению, не все производители упаковки выполняют свою работу качественно, поэтому получить удобную металлическую крышку довольно трудно. Решить этот вопрос можно заменив металлические крышки на пластмассу, но такое решение для нас неприемлемо, так как оно влечет за собой нанесение вреда маслу.
                   Вы можете самостоятельно провести следующий эксперимент: возьмите две баночки разного масла черного тмина — одну стеклянную, с металлической крышкой (например, наше масло «Доктор Тмин»), а другую пластиковую или же тоже стеклянную, но с пластмассовой крышкой (любого производителя) и просто сравните запах продукта. Вы будете удивлены,
