--- a/blog.html
+++ b/blog.html
@@ -106,7 +106,7 @@
         <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.6s">
           <div class="blog-item">
             <a href="#"><img src="images/blog6.jpg" width="350" height="262" alt=""></a>
-            <h3>Применение черного тмина при онкологических заболеванияхы</h3>
+            <h3>Применение черного тмина при онкологических заболеваниях</h3>
             <p>Рак.
               Рекомендуется при раке употреблять черный тмин с чесноком. Для профилактики</p>
             <a href="#">Читать дальше</a>
@@ -235,7 +235,7 @@
             <a href="#">Читать дальше</a>
           </div>
         </div>
-        
+
       </div><br><br>
     </div><br><br>
 
